--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -16,6 +16,11 @@
   }
 }
 
+.light {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}
+
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
